# PokeFightSimulartor

./: Dockerfile  README.md  logging_config.py  main.py  pyproject.toml  utils.py
config/: logging_config.py  logging_decorator.py
data/: types.csv
static/css/: pokemon_details.css  types_style.css
templates/: base.html  battle.html  index.html  pokemon_details.html  pokemon_stats.html  types.html
tests/: test_main.py
