[tool.poetry]
name = "pokefight"
version = "0.1.0"
description = "A (simple) pokemon battle simulator"
authors = ["Luigi Maglanoc <luigi_maglanoc@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.1"
pydantic = "^2.6.4"
uvicorn = "^0.29.0"
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
